# kiyov09.dev

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  justfile  package-lock.json  package.json  tailwind.config.js
components/: AboutMe.tsx  ArrowImage.tsx  Experience.tsx  Favicon.tsx  Footer.tsx  Hero.tsx  Link.tsx  Navbar.tsx  NotReadyAlert.tsx  TargetBlankLink.tsx  TechStack.tsx
components/Navbar/: HamburgerMenu.tsx  NavbarLink.tsx
components/UI/: Modal.tsx
components/UI/Buttons/: Cta.tsx
components/UI/Icons/: CloseIcon.tsx  GithubIcon.tsx  LinkedInIcon.tsx  TwitterIcon.tsx
pages/: _document.tsx  index.tsx
src/: main.rs  models.rs  posts.rs  templates.rs
static/: output.css
static/posts/: first_one.md
templates/: 404.html  base.html  index.html  nothing_yet.html
templates/components/: back_home_btn.html
templates/macros/: arrowed_links.html  go_back_link.html
templates/partials/: hamburger.html  socials.html
templates/posts/: _posts.html  index.html  show.html
