[package]
name = "kiyov09_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "markdown"] }
askama_axum = "0.3.0"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.1" , features = ["fs", "trace"] }
